Criando uma primeira versão do README; Corrigindo erro na apresentação da legenda (gráfico de inputs e outputs);

--- a/inst/app/www/css/page-panel.css
+++ b/inst/app/www/css/page-panel.css
@@ -60,6 +60,7 @@
   align-items: center;
   justify-content: center;
   margin-top: -2vh;
+  z-index: 9;
 }
 .nomelegenda{
   padding-left: 0.3vw !important;
