--- a/inst/app/www/css/style.css
+++ b/inst/app/www/css/style.css
@@ -2,23 +2,44 @@
 html, body {
   margin: 0;
   padding: 0;
+  background-color: transparent;
+  /*
   height: 100%;
+  min-height: 100vh;
+  margin-top: 0;
+  padding: 0;
+  width: 100%;
+  overflow: hidden;*/
+}
+
+
+/* Removendo scrollbar */
+/* For WebKit browsers (Chrome, Safari, Edge) */
+::-webkit-scrollbar {
+  width: 0; /* Remove scrollbar width */
+  height: 0; /* Remove scrollbar height */
+  background: transparent; /* Optional: Make scrollbar track transparent */
+}
+
+/* For Firefox */
+html {
+  scrollbar-width: none; /* Hide scrollbar */
+}
+
+/* For Internet Explorer and Edge (older versions) */
+body {
+  -ms-overflow-style: none; /* Hide scrollbar */
 }
 
 /* Arrumando espaçamentos */
 .container-fluid{
   padding: 0px !important;
+  /*background-color: #0762AE; /* Usando transparent para atribuir a cor no react
+  background-image: linear-gradient(#016AA6       , #009FAA);*/
 }
 
 /* Gradiente de background */
 .pageLayout{
-  background-color: #0762AE; /* For browsers that don't support gradients */
-  background-image: linear-gradient(#016AA6       , #009FAA);
-  min-height: 100vh;
-  margin-top: 0;
-  padding: 0;
-  width: 100%;
-  overflow: hidden;
 }
 /* Tamanho da página */
 /* Ajustando espaçamentos */
